# tairaccession

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: python-publish.yml  tairaccession.yml
CHANGELOG/: index.html
CONDUCT/: index.html
CONTRIBUTING/: index.html
docs/: CHANGELOG.md  CNAME  Makefile  conf.py  example.ipynb  index.md  make.bat
search/: search_index.json
src/tairaccession/: __init__.py  functionalNames.py  geneNames.py  tairaccession.py
tairaccession_sample_files/: all_ids.txt  gene_id.txt
tests/: test_tairaccession.py
