[tool.poetry]
name = "tairaccession"
version = "0.1.0"
description = "for using the tair and phytozome"
authors = ["Gaurav Sablok"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
